<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/number"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txt_number"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/type"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:id="@+id/txt_type"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/cheque_no"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:id="@+id/txt_cheque_no"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/date"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:id="@+id/txt_date"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/treatment_amount"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:layout_weight="1"
                    android:id="@+id/txt_treatment_amount"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:text="@string/remarks"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:id="@+id/txt_remarks"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>